--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "npx expo export --platform web",
+    "preview": "npx serve dist"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -16,8 +18,10 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "i18next": "^25.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
