--- a/app.json
+++ b/app.json
@@ -30,18 +30,18 @@
       "bundler": "metro",
       "output": "static",
       "meta": {
-        "title": "Crosul Speranței Blaj",
-        "description": "Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă. Alătură-te celei de-a VI-a ediții a Crosului Speranței!",
+        "title": "Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare",
+        "description": "Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă. Alătură-te celei de-a VIII-a ediții a Crosului Speranței!",
         "keywords": "cros, Blaj, Alba, alergare, caritate, sport, evenimente, speranța",
         "author": "Crosul Speranței Blaj",
         "image": "./assets/images/logo-crosul.png",
-        "og:title": "Crosul Speranței Blaj - Editia a VI-a",
-        "og:description": "Alătură-te celei de-a VI-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil.",
+        "og:title": "Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare",
+        "og:description": "Alătură-te celei de-a VIII-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil.",
         "og:image": "./assets/images/logo-crosul.png",
         "og:type": "website",
         "twitter:card": "summary_large_image",
-        "twitter:title": "Crosul Speranței Blaj",
-        "twitter:description": "Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă.",
+        "twitter:title": "Crosul Speranței Blaj - Editia a VIII-a",
+        "twitter:description": "Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă. Alătură-te celei de-a VIII-a ediții!",
         "twitter:image": "./assets/images/logo-crosul.png"
       }
     },
