--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.17",
     "expo-constants": "~17.1.7",
     "expo-linear-gradient": "^14.1.5",
