--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crosul_sperantei",
+  "name": "runhope",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -11,7 +11,11 @@
     "preview": "npx serve dist",
     "optimize-images": "node scripts/optimize-images.js",
     "build:optimized": "npm run optimize-images && npm run build:web",
-    "generate-icons": "node scripts/generate-pwa-icons.js"
+    "generate-icons": "node scripts/generate-pwa-icons.js",
+    "analyze-deps": "node scripts/analyze-dependencies.js",
+    "type-check": "tsc --noEmit",
+    "lint": "npx expo lint",
+    "bundle-analyze": "npm run build:web && npx webpack-bundle-analyzer dist/static/js/*.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
